# WeazyStroke

./: .gitignore  CMakeLists.txt  README.md  reinstall.sh
data/: weazystroke.desktop
docs/: actions.gen.html  actions.md  architecture.gen.html  architecture.md  config-gui.gen.html  config-gui.md  configuration.gen.html  configuration.md  index.html  input-pipeline.gen.html  input-pipeline.md  install.gen.html  install.md  lint-md.sh  md2html.sh  overlay.gen.html  overlay.md  recognition.gen.html  recognition.md
packaging/: 99-easystroke-wayland.rules  PKGBUILD  easystroke-wayland.service
src/: button_map.cc  button_map.h  eswl_config_main.cc  eswl_tray_main.cc  evdev_source.cc  evdev_source.h  gesture.cc  gesture.h  gesture_config.cc  gesture_config.h  gesture_recognizer.cc  gesture_recognizer.h  input_event.h  input_injector.h  input_sink.h  input_source.h  json.cc  json.h  keymap.cc  keymap.h  libinput_source.cc  libinput_source.h  main.cc  overlay_main.cc  process.cc  process.h  process_overlay.cc  process_overlay.h  process_tray.cc  process_tray.h  stroke.c  stroke.h  touch_evdev_source.cc  touch_evdev_source.h  touch_gate.h  trace_overlay.h  trigger_gate.h  uinput_injector.cc  uinput_injector.h
tests/: config_test.cc  gate_test.cc  json_test.cc  keymap_test.cc  multitemplate_test.cc  recognition_test.cc  touch_gate_test.cc  trigger_gate_test.cc
